openshift/awarder.deployment.config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
  labels:
    app: awarder
  name: awarder
spec:
  replicas: 1
  selector:
    app: awarder
    deploymentconfig: awarder
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    type: Rolling
  template:
    metadata:
      labels:
        app: awarder
        deploymentconfig: awarder
    spec:
      containers:
        - name: awarder
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - awarder
      from:
        kind: ImageStreamTag
        name: 'awarder:latest'
    type: ImageChange
