openshift/event_listener.deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
  labels:
    app: event-listener
  name: event-listener
spec:
  replicas: 1
  selector:
    app: event-listener
    deploymentconfig: event-listener
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    type: Rolling
  template:
    metadata:
      labels:
        app: event-listener
        deploymentconfig: event-listener
    spec:
      containers:
        - name: event-listener
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - event-listener
      from:
        kind: ImageStreamTag
        name: 'event-listener:latest'
    type: ImageChange
