openshift/ludus.awarder.deployment.template.yaml
apiVersion: v1
kind: Template

metadata:
  name: awarder
  annotations:
    description: "This application analyzes events and awards badges out of certain activity"
    tags: "awarder,ludus"

parameters:
- name: GITHUB_URL
  description: The Github URL of forked Ludus repository
  value: 'https://github.com/akhil-rane/Ludus.git'
  required: true
- name: KAFKA_TOPIC
  description: The kafka topic to consume events
  value: 'dynamic-ludus-events-ingest-prod'
  required: true
- name: KAFKA_BOOTSTRAP_SERVER
  description: The kafka bootstrap server in open data hub
  value: 'kafka.datahub.redhat.com:443'
  required: true
- name: AWARDER_NAME
  description: The name of the awarder application
  value: 'ludus_awarder'
  required: true
- name: AWARDER_PORT
  description: The port on which awarder application is running
  value: '5001'
  required: true
- name: EVENTS_TABLE_NAME
  description: The faust table to store events related data for every user
  value: 'aggregated_event_data_table'
  required: true
- name: BADGES_TABLE_NAME
  description: The faust table to store already awarded badges for every user
  value: 'awarded_badges_table'
  required: true

objects:
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    labels:
      app: awarder
    name: awarder
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: 'awarder:latest'
    source:
      git:
        ref: master
        uri: ${GITHUB_URL}
      type: Git
    strategy:
      dockerStrategy:
        dockerfilePath: dockerfiles/awarder/Dockerfile
        from:
          kind: ImageStreamTag
          name: 'python:3.6'
          namespace: openshift
      type: Docker
    successfulBuildsHistoryLimit: 5
    triggers:
      - github:
          secret: awarder.github.secret
        type: GitHub
      - generic:
          secret: awarder.generic.secret
        type: Generic
      - type: ConfigChange
      - imageChange:
        type: ImageChange
  status:
    lastVersion: 0

- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
    labels:
      app: awarder
    name: awarder
  spec:
    replicas: 1
    selector:
      app: awarder
      deploymentconfig: awarder
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      type: Rolling
    template:
      metadata:
        labels:
          app: awarder
          deploymentconfig: awarder
      spec:
        containers:
          - name: awarder
            ports:
              - containerPort: 8080
                protocol: TCP
            resources: {}
            terminationMessagePath: /dev/termination-log
            terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    triggers:
      - type: ConfigChange
      - imageChangeParams:
          automatic: true
          containerNames:
            - awarder
          from:
            kind: ImageStreamTag
            name: 'awarder:latest'
        type: ImageChange

- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    generation: 1
    labels:
      app: awarder
    name: awarder
  spec:
    lookupPolicy:
      local: false
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: awarder
    name: python-36
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: registry.access.redhat.com/ubi7/python-36
      from:
        kind: DockerImage
        name: registry.access.redhat.com/ubi7/python-36
      generation: 2
      importPolicy: {}
      name: latest
      referencePolicy:
        type: Source
  status:
    dockerImageRepository: ""
