openshift/awarder.service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: event-listener
  name: event-listener
  namespace: aiops-kubeflow
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: event-listener
    deploymentconfig: event-listener
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
