openshift/event_listener.service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: event-listener
  name: event-listener
spec:
  ports:
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 5000
  selector:
    app: event-listener
    deploymentconfig: event-listener
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
