openshift/event_listener.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: event-listener
  name: event-listener-route
spec:
  port:
    targetPort: 8081-tcp
  to:
    kind: Service
    name: event-listener
    weight: 100
  wildcardPolicy: None
status:
